--- a/src/pages/pass/passx.scss
+++ b/src/pages/pass/passx.scss
@@ -3,7 +3,7 @@ $font-stack: Comforter Brush, cursive; */
 
 $back-color: rgb(209, 0, 0);
 
-div {
+.text_pass {
     font: 150%;    
 
     box-shadow: 15px 0 0 0 $back-color, -5px 0 0 0 $back-color;
@@ -13,4 +13,17 @@ div {
 
     padding: 1% 0 !important;
     position: relative;
+
+    margin: auto;
+
+}
+
+.body_1 {
+    background-image: url('../../assets/1.gif');
+    background-size: cover;
+
+    height: 100vh;
+    width: 100vw;
+
+    margin: 0 auto;
 }
